Added protocol plugins - continuation of #958 (#959)
Added protocol plugins to separate protocol from storage driver. The protocol plugins are currently only implemented in Python. Currently 3 protocols plugins has been added: file, http and sftp.

Other improvements:
* Updated installation of Python packages
* Generalised cmake statements by using generator expression
* Made urlencode accessible from Python
* Improve testing of uriencode()/uridecode()
* Fixed some issues the Options class
* Updated C implementation of protocol paths
* Added to tips and tricks
* Ensure that location always is a string, since urlparse on Windows does not support Path objects.
* Added documentation
* Fixed segfault in Python interface to urlencode() and added parse_query() and make_query() functions.
* Updated dlite.options module
* Added test_options.py
* Added more tests and included protocols to Instance.from_url(url) and save(url)
* Cleaning up and simplifying CMakeLists.txt
* Reduce MSVS warnings
* Added test_plugin.py

---------

Co-authored-by: Francesca L. Bleken <48128015+francescalb@users.noreply.github.com>

--- a/src/config-paths.h.in
+++ b/src/config-paths.h.in
@@ -3,22 +3,25 @@
 #ifndef _DLITE_CONFIG_PATHS_H
 #define _DLITE_CONFIG_PATHS_H
 
-#define dlite_PATH                   "@dlite_PATH@"
-#define dlite_PATH_EXTRA             "@dlite_PATH_EXTRA@"
+#define dlite_PATH                    "@dlite_PATH@"
+#define dlite_PATH_EXTRA              "@dlite_PATH_EXTRA@"
 /* FIXME: This has no meaning for Windows but ./tools/dlite-env.c expects this and does not like backslashes */
-#define dlite_LD_LIBRARY_PATH        "@dlite_LD_LIBRARY_PATH@"
-#define dlite_PYTHONPATH             "@dlite_PYTHONPATH@"
+#define dlite_LD_LIBRARY_PATH         "@dlite_LD_LIBRARY_PATH@"
+#define dlite_PYTHONPATH              "@dlite_PYTHONPATH@"
+#define dlite_PYTHONPATH_NATIVE       "@dlite_PYTHONPATH_NATIVE@"
 
-#define dlite_BUILD_ROOT             "@dlite_BUILD_ROOT_NATIVE@"
-#define dlite_INSTALL_ROOT           "@CMAKE_INSTALL_PREFIX@"
+//#define dlite_BUILD_ROOT              "@dlite_BUILD_ROOT_NATIVE@"
+#define dlite_BUILD_ROOT              "@dlite_BINARY_DIR@"
+#define dlite_INSTALL_ROOT            "@CMAKE_INSTALL_PREFIX@"
 
 /* hardcoded paths in build tree */
-#define dlite_STORAGE_PLUGINS        "@dlite_STORAGE_PLUGINS@"
-#define dlite_MAPPING_PLUGINS        "@dlite_MAPPING_PLUGINS@"
-#define dlite_PYTHON_STORAGE_PLUGINS "@dlite_PYTHON_STORAGE_PLUGINS@"
-#define dlite_PYTHON_MAPPING_PLUGINS "@dlite_PYTHON_MAPPING_PLUGINS@"
-#define dlite_TEMPLATES              "@dlite_TEMPLATES@"
-#define dlite_STORAGES               "@dlite_STORAGES@"
+#define dlite_STORAGE_PLUGINS         "@dlite_STORAGE_PLUGINS@"
+#define dlite_MAPPING_PLUGINS         "@dlite_MAPPING_PLUGINS@"
+#define dlite_PYTHON_STORAGE_PLUGINS  "@dlite_PYTHON_STORAGE_PLUGINS@"
+#define dlite_PYTHON_MAPPING_PLUGINS  "@dlite_PYTHON_MAPPING_PLUGINS@"
+#define dlite_PYTHON_PROTOCOL_PLUGINS "@dlite_PYTHON_PROTOCOL_PLUGINS@"
+#define dlite_TEMPLATES               "@dlite_TEMPLATES@"
+#define dlite_STORAGES                "@dlite_STORAGES@"
 
 
 #endif /* _DLITE_CONFIG_PATHS_H */
