--- a/src/pyembed/CMakeLists.txt
+++ b/src/pyembed/CMakeLists.txt
@@ -1,10 +1,12 @@
 # -*- Mode: cmake -*-
 
+
 set(pyembed_sources
   pyembed/dlite-pyembed.c
   pyembed/dlite-pyembed-utils.c
   pyembed/dlite-python-singletons.c
   pyembed/dlite-python-storage.c
   pyembed/dlite-python-mapping.c
+  pyembed/dlite-python-protocol.c
   PARENT_SCOPE
-  )
+)
