--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -4,6 +4,10 @@ project(dlite-tools C)
 # TODO - It would be preferable to link with the shared libraries.
 # How to do that without breaking the docker build?
 
+if(MSVC)  # Unset extra_link_libraries on MSVC to avoid linking against None.lib
+  unset(extra_link_libraries)
+endif()
+
 # dlite-getuuid
 add_executable(dlite-getuuid dlite-getuuid.c)
 target_link_libraries(dlite-getuuid
@@ -60,6 +64,6 @@ install(
 )
 install(
   DIRECTORY templates
-  DESTINATION share/dlite
+  DESTINATION ${Python3_PREFIX}share/dlite
   PATTERN "*~" EXCLUDE
 )
