--- a/src/utils/config.h.in
+++ b/src/utils/config.h.in
@@ -50,6 +50,7 @@
 #cmakedefine HAVE__STRNICMP
 
 #cmakedefine HAVE_SETENV
+#cmakedefine HAVE__PUTENV_S
 #cmakedefine HAVE_UNSETENV
 
 #cmakedefine HAVE_REALPATH
