--- a/doc/conf.py.in
+++ b/doc/conf.py.in
@@ -51,15 +51,7 @@ exclude_patterns = [
 ]
 
 extensions = [
-    # Temporary disable autoapi since it leads to the following error during
-    # build of HTML documentation
-    #
-    # Extension error (autoapi.extension):
-    # Handler <function run_autoapi at 0x7f1ac734be50> for event
-    # 'builder-inited' threw an exception (exception: 'Module' object has no
-    # attribute 'doc')
-    #
-    #"autoapi.extension",
+    "autoapi.extension",
     "breathe",  # Doxygen bridge
     "myst_nb",  # markdown source support & support for Jupyter notebooks
     "sphinx.ext.graphviz",  # Graphviz
@@ -84,12 +76,13 @@ dlite_share_plugins = [
     if plugin_dir.is_dir()
 ]
 
-autoapi_dirs = [
-    "@CMAKE_BINARY_DIR@/bindings/python/dlite"
-] + [
-    f"@CMAKE_BINARY_DIR@/bindings/python/dlite/share/dlite/{plugin_dir}"
-    for plugin_dir in dlite_share_plugins
-]
+#autoapi_dirs = [
+#    "@CMAKE_BINARY_DIR@/bindings/python/dlite"
+#] + [
+#    f"@CMAKE_BINARY_DIR@/bindings/python/dlite/share/dlite/{plugin_dir}"
+#    for plugin_dir in dlite_share_plugins
+#]
+autoapi_dirs = ["@CMAKE_BINARY_DIR@/bindings/python/dlite"]
 autoapi_type = "python"
 autoapi_file_patterns = ["*.py", "*.pyi"]
 autoapi_template_dir = "_templates/autoapi"
@@ -103,7 +96,10 @@ autoapi_options = [
     "imported-members",
 ]
 autoapi_keep_files = True  # Should be False in production
+#autoapi_keep_files = False  # Should be False in production
 autoapi_python_use_implicit_namespaces = True  # True to avoid namespace being `python.dlite`
+#autoapi_ignore = ["@CMAKE_BINARY_DIR@/doc/_build/autoapi/dlite/dlite"]
+
 
 autodoc_typehints = "description"
 autodoc_typehints_format = "short"
@@ -127,7 +123,7 @@ html_theme_options = {
     "use_issues_button": True,
     "use_fullscreen_button": True,
     "use_repository_button": True,
-    "logo_only": True,
+    #"logo_only": True,
     "show_navbar_depth": 1,
     "announcement": "This documentation is under development!",
 }
