--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -815,7 +815,8 @@ RECURSIVE              = YES
 # Note that relative paths are relative to the directory from which doxygen is
 # run.
 
-EXCLUDE                =
+EXCLUDE                = @dlite_SOURCE_DIR@/src/tests \
+                         @dlite_SOURCE_DIR@/src/utils/jsmn.h
 
 # The EXCLUDE_SYMLINKS tag can be used to select whether or not files or
 # directories that are symbolic links (a Unix file system feature) are excluded
@@ -831,7 +832,7 @@ EXCLUDE_SYMLINKS       = NO
 # Note that the wildcards are matched against the file with absolute path, so to
 # exclude all test directories for example use the pattern */test/*
 
-EXCLUDE_PATTERNS       = */tests/* \
+EXCLUDE_PATTERNS       = */tests/test_* \
                          */old/*
 
 # The EXCLUDE_SYMBOLS tag can be used to specify one or more symbol names
@@ -843,7 +844,10 @@ EXCLUDE_PATTERNS       = */tests/* \
 # Note that the wildcards are matched against the file with absolute path, so to
 # exclude all test directories use the pattern */test/*
 
-EXCLUDE_SYMBOLS        =
+EXCLUDE_SYMBOLS        = _WDIR _wdirent __attribute__
+
+
+
 
 # The EXAMPLE_PATH tag can be used to specify one or more files or directories
 # that contain example code fragments that are included (see the \include
