--- a/bindings/python/scripts/CMakeLists.txt
+++ b/bindings/python/scripts/CMakeLists.txt
@@ -79,3 +79,13 @@ test_success(
   dlite-validate-empty
   dlite-validate Empty.json
 )
+# Test valid yaml
+test_success(
+  dlite-validate-valid1-yaml
+  dlite-validate ../tests/entities/Valid1.yaml
+)
+# Test invalid yaml
+test_failure(
+  dlite-validate-invalid1-yaml
+  dlite-validate ../tests/entities/Invalid1.yaml
+)
