--- a/bindings/python/tests/entities/InvalidYaml1.yaml
+++ b/bindings/python/tests/entities/InvalidYaml1.yaml
@@ -1,5 +1,5 @@
 # An invalid version of datamodel Valid1.yaml
-uri: http://onto-ns.com/meta/0.1/Invalid1
+uri: http://onto-ns.com/meta/0.1/InvalidYaml1
 description: An datamodel for an item with float type and invalid shape name.
 dimensions:
   nf: Number of eigen-frequencies.
