--- a/bindings/python/tests/entities/ValidYaml1.yaml
+++ b/bindings/python/tests/entities/ValidYaml1.yaml
@@ -1,5 +1,5 @@
 # An valid version of datamodel Invalid1.yaml
-uri: http://onto-ns.com/meta/0.1/Invalid1
+uri: http://onto-ns.com/meta/0.1/ValidYaml1
 description: An datamodel for an item with float type and invalid shape name.
 dimensions:
   nf: Number of eigen-frequencies.
