--- a/.github/docker/Dockerfile-manylinux_x_y.template
+++ b/.github/docker/Dockerfile-manylinux_x_y.template
@@ -38,11 +38,9 @@
 # Reference: https://github.com/pypa/manylinux
 FROM quay.io/pypa/manylinux{{ TYPE }}_{{ ARCH }}:latest
 
-ARG PY_MINORS="{{ PY_MINORS }}"
-
 {{ EXTRA_PRE }}
 
-COPY requirements_full.txt requirements_dev.txt /tmp/
+COPY requirements.txt requirements_full.txt requirements_dev.txt /tmp/
 
 # Enable rpmfusion for additional packages
 RUN \
@@ -62,21 +60,25 @@ RUN \
   # It's necessary to be in /opt/_internal because the internal libraries
   # exist here.
   cd /opt/_internal && \
-  tar -Jxvf static-libs-for-embedding-only.tar.xz && \
+  tar -Jxvf static-libs-for-embedding-only.tar.xz
   # Filter out challenging packages from requirements_full.txt
   #sed \
   #  -e '/pyarrow/d' \
   #  -e '/tables/d' \
   #  -e '/scikit-image/d' \
   #  -i /tmp/requirements_full.txt && \
-  # Install required Python packages
+    # Install required Python packages
+
+ARG PY_MINORS="{{ PY_MINORS }}"
+
+RUN \
   mkdir -p /ci/pip_cache && \
   for minor in ${PY_MINORS}; do \
     python3.${minor} -m pip install --cache-dir=/ci/pip_cache -U pip && \
     python3.${minor} -m pip install --cache-dir=/ci/pip_cache \
       -U setuptools wheel && \
     python3.${minor} -m pip install --cache-dir=/ci/pip_cache \
-      oldest-supported-numpy \
+      -r /tmp/requirements.txt \
       -r /tmp/requirements_dev.txt \
       -r /tmp/requirements_full.txt; \
   done && \
