--- a/.github/docker/Dockerfile-musllinux.template
+++ b/.github/docker/Dockerfile-musllinux.template
@@ -58,6 +58,7 @@ RUN \
   cd /opt/_internal && \
   tar -Jxvf static-libs-for-embedding-only.tar.xz && \
   # Filter out challenging packages from requirements_full.txt
+    #-e 's/^pydantic.*/pydantic<2/' \
   sed \
     -e '/pandas/d' \
     -e '/pyarrow/d' \
@@ -68,8 +69,12 @@ RUN \
     -e '/scikit-image/d' \
     -e '/ncempy/d' \
     -e '/h5py/d' \
-    -i /tmp/requirements_full.txt
-    #-e 's/^pydantic.*/pydantic<2/' \
+    -e '/pymongo/d' \
+    -e '/fortran-language-server/d' \
+    -i /tmp/requirements_full.txt && \
+  sed \
+    -e '/mongomock/d' \
+    -i /tmp/requirements_dev.txt
 
 ARG PY_MINORS="{{ PY_MINORS }}"
 
