--- a/requirements_full.txt
+++ b/requirements_full.txt
@@ -22,7 +22,7 @@ pymongo>=4.4.0,<5
 
 # Utilities
 pydantic>=1.10.0,<2.9.3
-typing_extensions>=4.1,<5
+typing_extensions>=4.1,<5; python_version<'3.9'
 fortran-language-server>=1.12.0,<1.13
 
 # For TEM demo
