--- a/.github/docker/Dockerfile-manylinux.template
+++ b/.github/docker/Dockerfile-manylinux.template
@@ -1,12 +1,17 @@
 # -*- Mode: Dockerfile -*-
-# Template Dockerfile for building Python pypi package.  Going to be
-# superseeded by Dockerfile-manylinux_x_y.template
+# Template Dockerfile for manylinux 2010 and 2014 for building Python pypi package.
+# Is superseeded by the Dockerfile-manylinux_x_y.template, but will continue to be used to support i686 architectures.
+#
+# On these old systems we do not install requirements_full.txt
 #
 # Usage:
 #
 # Copy this template file and replace:
 # - `{{ TYPE }}` major glibc version, ex: _2_24, _2_28
-# - `{{ ARCH }}` with a valid arch, ex:  x86_64, i686
+# - `{{ ARCH }}` architecture, ex:  x86_64, i686
+# - `{{ PY_MINORS }}` minor Python3 version numbers, ex: "8 9 10"
+# - `{{ EXTRA_PRE }}` extra commands before installation
+# - `{{ EXTRA_POST }}` extra commands after installation
 # Remove the `.template` suffix from the copy.
 #
 # Examples
@@ -35,9 +40,7 @@
 # Reference: https://github.com/pypa/manylinux#manylinux2014-centos-7-based
 FROM quay.io/pypa/manylinux{{ TYPE }}_{{ ARCH }}:latest
 
-ARG PY_MINORS="8 9 10 11 12"
-
-COPY requirements_full.txt requirements_dev.txt /tmp/
+COPY requirements.txt requirements_full.txt requirements_dev.txt /tmp/
 
 {{ EXTRA_PRE }}
 
@@ -48,7 +51,6 @@ RUN \
     https://mirrors.rpmfusion.org/free/el/rpmfusion-free-release-$(rpm --eval %{centos_ver}).noarch.rpm \
     https://mirrors.rpmfusion.org/nonfree/el/rpmfusion-nonfree-release-$(rpm --eval %{centos_ver}).noarch.rpm && \
   yum install -y \
-    swig \
     redland-devel \
     rasqal-devel \
     libcurl-devel \
@@ -65,20 +67,11 @@ RUN \
   # Filter out challenging packages from requirements
   sed \
     -e '/mongomock/d' \
-    -i  /tmp/requirements_dev.txt && \
-  sed \
-    -e '/pandas/d' \
-    -e '/pyarrow/d' \
-    -e '/tables/d' \
-    -e '/openpyxl/d' \
-    -e '/jinja2/d' \
-    -e '/pydantic/d' \
-    -e '/fortran-language-server/d' \
-    -e '/matplotlib/d' \
-    -e '/scikit-image/d' \
-    -e '/ncempy/d' \
-    -e '/h5py/d' \
-    -i /tmp/requirements_full.txt && \
+    -i  /tmp/requirements_dev.txt
+
+ARG PY_MINORS="{{ PY_MINORS }}"
+
+RUN \
   # Install required Python packages
   mkdir -p /ci/pip_cache && \
   for minor in ${PY_MINORS}; do \
@@ -86,9 +79,8 @@ RUN \
     python3.${minor} -m pip install --cache-dir=/ci/pip_cache \
       -U setuptools wheel && \
     python3.${minor} -m pip install --cache-dir=/ci/pip_cache \
-      oldest-supported-numpy \
-      -r /tmp/requirements_dev.txt \
-      -r /tmp/requirements_full.txt; \
+      -r /tmp/requirements.txt \
+      -r /tmp/requirements_dev.txt; \
   done && \
   rm -rf /ci/pip_cache
 
