--- a/.github/workflows/container_builds_weekly.yml
+++ b/.github/workflows/container_builds_weekly.yml
@@ -26,8 +26,7 @@ jobs:
         - system: "manylinux"
           type: "_2_34"
           arch: "x86_64"
-          #py_minors: "8 9 10 11 12 13"
-          py_minors: "8 9 10 11 12"
+          py_minors: "8 9 10 11 12 13"
         #- system: "manylinux"
         #  type: "_2_28"
         #  arch: "x86_64"
@@ -45,8 +44,7 @@ jobs:
         - system: "musllinux"
           type: "_1_2"
           arch: "x86_64"
-          #py_minors: "8 9 10 11 12 13"
-          py_minors: "8 9 10 11"
+          py_minors: "8 9 10 11 12 13"
         #- system: "musllinux"
         #  type: "_1_1"
         #  arch: "x86_64"
@@ -60,8 +58,7 @@ jobs:
         - system: "manylinux"
           type: "2014"
           arch: "i686"
-          #py_minors: "8 9 10 11 12 13"
-          py_minors: "8 9 10 11 12"
+          py_minors: "8 9 10 11 12 13"
         #- system: "manylinux"
         #  type: "2010"
         #  arch: "i686"
@@ -71,8 +68,7 @@ jobs:
         - system: "musllinux"
           type: "_1_2"
           arch: "i686"
-          #py_minors: "8 9 10 11 12 13"
-          py_minors: "8 9 10 11"
+          py_minors: "8 9 10 11 12 13"
         #- system: "musllinux"
         #  type: "_1_1"
         #  arch: "i686"
