--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -2,8 +2,9 @@
   requires = [
     "setuptools>=58",
     "wheel>=0.37",
-    "oldest-supported-numpy",
-    "cmake",
+    "numpy>=1.14.5,<2.1.3",
+    "cmake=3.31.1",
+    "swig=4.1.1",
   ]
 build-backend = "setuptools.build_meta"
 
