--- a/.github/workflows/container_builds_weekly.yml
+++ b/.github/workflows/container_builds_weekly.yml
@@ -61,7 +61,7 @@ jobs:
           type: "2014"
           arch: "i686"
           #py_minors: "8 9 10 11 12 13"
-          py_minors: "8 9 10 11 12"
+          py_minors: "10 11 12"
         #- system: "manylinux"
         #  type: "2010"
         #  arch: "i686"
