--- a/requirements_full.txt
+++ b/requirements_full.txt
@@ -22,7 +22,7 @@ pymongo>=4.4.0,<5
 
 # Utilities
 # Bug in pydantic 2.10.1, see https://github.com/pydantic/pydantic/issues/9898
-pydantic>=1.10.0,!=2.10.1,<2.10.2
+pydantic>=1.10.0,!=2.10.0,!=2.10.1,<2.10.2
 typing_extensions>=4.1,<5; python_version<'3.9'
 fortran-language-server>=1.12.0,<1.13
 
