--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,12 +1,11 @@
 [build-system]
-requires = []
-#requires = [
-#  "numpy>=1.14.5,<2.1.3",
-#  #"setuptools>=58",
-#  #"wheel>=0.37",
-#  #"cmake==3.31.1",
-#  #"swig==4.1.1",
-#]
+requires = [
+  "setuptools>=58; python_version<'3.12'",
+  "wheel>=0.37; python_version<'3.12'",
+  #"numpy>=1.14.5,<2.1.3",
+  #"cmake==3.31.1",
+  #"swig==4.1.1",
+]
 build-backend = "setuptools.build_meta"
 
 [tool.cibuildwheel]
