--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -2,9 +2,9 @@
 requires = [
   "setuptools>=58; python_version<'3.12'",
   "wheel>=0.37; python_version<'3.12'",
-  #"numpy>=1.14.5,<2.1.3",
-  #"cmake==3.31.1",
-  #"swig==4.1.1",
+  "numpy>=1.14.5,<2.1.3",
+  "cmake==3.31.1",
+  "swig==4.1.1",
 ]
 build-backend = "setuptools.build_meta"
 
