--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,7 +1,9 @@
 [build-system]
 requires = [
-  "setuptools>=58; python_version<'3.12'",
-  "wheel>=0.37; python_version<'3.12'",
+  #"setuptools>=58; python_version<'3.12'",
+  #"wheel>=0.37; python_version<'3.12'",
+  "setuptools>=58",
+  "wheel>=0.37",
   "numpy>=1.14.5,<2.1.3",
   "cmake==3.31.1",
   "swig==4.1.1",
@@ -24,7 +26,7 @@ before-build = [
   "export PYVER=$(python -c \"import sys; print(f'{sys.version_info.major}.{sys.version_info.minor}')\")",
   "export ABITAG=$(python -c \"import sys; cp=f'cp{sys.version_info.major}{sys.version_info.minor}'; print(f'{cp}-{cp}{sys.abiflags}')\")",
 ]
-#before-test = "python -m pip install --cache-dir /ci/pip_cache --prefer-binary -r {project}/requirements.txt"
+before-test = "python -m pip install --cache-dir /ci/pip_cache --prefer-binary -r {project}/requirements.txt"
 test-command = "python {package}/../bindings/python/tests/test_python_bindings.py"
 
 [tool.cibuildwheel.linux.environment]
