Renamed windows.yml to ci_build_windows.yml

--- a/.github/workflows/ci_build_windows.yml
+++ b/.github/workflows/ci_build_windows.yml
@@ -57,5 +57,5 @@ jobs:
       working-directory: build
 
     - name: Test
-      run: ctest -C Release
+      run: ctest -C Release --rerun-failed --output-on-failure -V
       working-directory: build
